styles/manager.scss
h1 {
  text-align: center;
  margin-left: 7%;
}

#mode-switch {
  height: 40px;
  width: 120px;
  font-size: 18px;
  padding: 10px;
  background-color: #ccc; // default background color
  &.dark-mode {
  background-color: #444; // background color in dark mode
  }
}

.loginbutton {
  height: 40px;
  width: 120px;
  font-size: 18px;
  padding: 10px;
  background-color: #ccc; // default background color
  &.dark-mode {
  background-color: #444; // background color in dark mode
  }
}

.logoutbutton {
  height: 40px;
  width: 120px;
  font-size: 18px;
  padding: 10px;
  background-color: #ccc; // default background color
  &.dark-mode {
  background-color: #444; // background color in dark mode
  }
}

.registerbutton {
  height: 40px;
  width: 120px;
  font-size: 18px;
  padding: 10px;
  background-color: #ccc; // default background color
  &.dark-mode {
  background-color: #444; // background color in dark mode
  }
}

.mode-switch {
  margin-right:40px;
}
.nav-bar {
  position: absolute;
  top: 40px;
}
#register {
  margin: 1em;
}
#login {
  margin: 1em;
}
#logout {
  margin: 1em;
}

body {
  font-family: Arial, sans-serif;
  background-color: #f5f5f5;
  color: #333;

  &.dark-mode {
  background-color: #333;
  color: #f5f5f5;
  }
}

.main-container {
  //background-color: lightgray;
  padding: 20px;
  border: 1px solid skyblue;
  border-radius: 5px;
  margin-top: 1%;
  //margin-left: 20%;
  //margin-right: 20%;

  &.dark-mode {
  background-color: darkgrey;
  color: #f5f5f5;
  }



table {
  width: 100%;
  border-collapse: collapse;

  th, td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
  }

  th {
    background-color: #ddd;
  }
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;

  input[type="text"] {
    width: 20%;
    height: 20px;
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 5px;
    border: 1px solid #ddd;
    font-size: 16px;

    &::placeholder {
      font-style: italic;
      color: #ddd;
    }
  }

  // button[type="submit"] {
  //   width: 120px;
  //   height: 40px;
  //   background-color: #2196f3;
  //   color: white;
  //   border: none;
  //   border-radius: 5px;
  //   cursor: pointer;
  //   font-size: 16px;
  //   font-weight: bold;
  //   margin: 10px;
  // }
}

.login-register {
  width: 120px;
  height: 40px;
  background-color: #2196f3;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
  font-weight: bold;
  margin: 10px;
}

#checkboxes-popup {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1;
}
#checkboxes-popup-content {
  background-color: white;
  border: 1px solid #888;
  width: 300px;
  height: 200px;
  margin: 15% auto;
  padding: 20px;
  position: relative;
}
#checkboxes-popup-close {
  position: absolute;
  top: 10px;
  right: 10px;
}

.first-row {
  color: black;
}

#checkboxes-popup {
  color: black;
}

#category {
  margin-bottom: 10px
}

header {
  position: relative;
  padding: 0 2rem;
  background-color: #9cadce;
}

.navbar {
  width: 100%;
  height: 60px;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: black;
}

.navbar .logo {
  font-size: 1.5rem;
  font-weight: bold;
}

.logo {
  display: flex;
  align-items: center;
  text-align: center;
}

.lrlr {
  display: flex;
  align-items: center;
}

.llogin-register {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 46.5%;
  margin-top: 1%;
  margin-bottom: 1%;
}

